--- a/angular-heroes/src/app/navbar/navbar.component.html
+++ b/angular-heroes/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
                     ariaCurrentWhenActive="page">List</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/form" routerLinkActive="active"
+                    <a class="nav-link" routerLink="/compare" routerLinkActive="active"
                     ariaCurrentWhenActive="page">Compare</a>
                 </li>
             </ul>
