--- a/angular-heroes/src/app/heroes/list-item/list-item.component.html
+++ b/angular-heroes/src/app/heroes/list-item/list-item.component.html
@@ -2,7 +2,7 @@
     <div class="card-body">
         <div class="d-flex flex-row">
             <div>
-                <h5 class="card-title">{{hero.name}}</h5>
+                <h5 class="card-title d-block text-truncate" style="max-width: 200px;">{{hero.name}}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">{{hero.race}}</h6>
             </div>
             <i type="button" class="ms-auto align-self-center" (click)="navigateToEdit()"><fa-icon [icon]="faEdit"></fa-icon></i>
