feedbacks para o usuario com alert

--- a/angular-heroes/src/app/heroes/compare-result/compare-result.component.html
+++ b/angular-heroes/src/app/heroes/compare-result/compare-result.component.html
@@ -10,7 +10,7 @@
                     [ngClass]="comparationResult.strength_diff < 0 ? 'bg-danger' : 'bg-primary'">{{comparationResult.strength_diff}}</span></li>
             <li class="list-group-item d-flex align-items-center">Agility Diff: <span class="badge ms-auto"
                     [ngClass]="comparationResult.agility_diff < 0 ? 'bg-danger' : 'bg-primary'">{{comparationResult.agility_diff}}</span></li>
-            <li class="list-group-item d-flex align-items-center">Desterity Diff: <span class="badge ms-auto"
+            <li class="list-group-item d-flex align-items-center">Dexterity Diff: <span class="badge ms-auto"
                     [ngClass]="comparationResult.dexterity_diff < 0 ? 'bg-danger' : 'bg-primary'">{{comparationResult.dexterity_diff}}</span></li>
             <li class="list-group-item d-flex align-items-center">Intelligence Diff: <span class="badge ms-auto"
                     [ngClass]="comparationResult.intelligence_diff < 0 ? 'bg-danger' : 'bg-primary'">{{comparationResult.intelligence_diff}}</span></li>
